# masters-degree-thesis

./: .editorconfig  .gitignore  README.md  config.toml  pyproject.toml
firmware_test_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fw_test/: api.py  cloud.py  config.py  context.py  firmware.py  io.py  main.py  wifi.py
fw_test/cloud/: __init__.py  cloud.py  jobs.py  mqtt.py  protocol.py  serializer.py  state.py
fw_test/tests/: test_serializer.py
tests/: config.toml  conftest.py  offline_working.py  pytest.ini  state.py  test_downgrade.py  test_factory_reset.py  test_factory_reset_offline.py  test_factory_reset_unbounded.py  test_offline_working.py  test_ota.py  test_pairing.py  test_standby.py  test_thermoregulation.py  utils.py
